--- a/spring-cloud-oauth/springcloud-oauth-resource/pom.xml
+++ b/spring-cloud-oauth/springcloud-oauth-resource/pom.xml
@@ -34,6 +34,41 @@
 		  <groupId>org.springframework.cloud</groupId>
 		  <artifactId>spring-cloud-starter-eureka</artifactId>
 	  </dependency>
+	  <dependency>
+		  <groupId>mysql</groupId>
+		  <artifactId>mysql-connector-java</artifactId>
+          <version>8.0.11</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.baomidou</groupId>
+		  <artifactId>mybatis-plus-boot-starter</artifactId>
+		  <version>2.2.0</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.alibaba</groupId>
+		  <artifactId>fastjson</artifactId>
+		  <version>1.2.15</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.apache.velocity</groupId>
+		  <artifactId>velocity-engine-core</artifactId>
+		  <version>2.0</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.canmel.dwsurvey</groupId>
+		  <artifactId>springcloud-base-core</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+	  </dependency>
+	  <dependency>
+		  <groupId>org.projectlombok</groupId>
+		  <artifactId>lombok</artifactId>
+		  <optional>true</optional>
+	  </dependency>
+	  <dependency>
+		  <groupId>com.github.pagehelper</groupId>
+		  <artifactId>pagehelper-spring-boot-starter</artifactId>
+		  <version>1.2.5</version>
+	  </dependency>
 	</dependencies>
 
 	<dependencyManagement>
