--- a/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
-    url: jdbc:mysql://localhost:3306/dwsurvey?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://localhost:3306/dw_oauth2?useUnicode=true&characterEncoding=utf8
     type: com.alibaba.druid.pool.DruidDataSource
     tomcat:
       initial-size: 5
