--- a/spring-cloud-oauth/pom.xml
+++ b/spring-cloud-oauth/pom.xml
@@ -13,5 +13,6 @@
   	<module>springcloud-zuul-getway</module>
   	<module>springcloud-eureka-server</module>
     <module>springcloud-base-core</module>
+    <module>springcloud-oauth-resource-system</module>
   </modules>
 </project>
