--- a/spring-cloud-oauth/springcloud-base-core/pom.xml
+++ b/spring-cloud-oauth/springcloud-base-core/pom.xml
@@ -23,6 +23,11 @@
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>com.baomidou</groupId>
+			<artifactId>mybatis-plus-boot-starter</artifactId>
+			<version>2.2.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
