--- a/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
@@ -27,15 +27,17 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dwsurvey?useUnicode=true&characterEncoding=utf8&useSSL=true
+    url: jdbc:mysql://localhost:3306/dwsurvey?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
+
 mybatis-plus:
   mapper-locations: classpath:mybatis/mapper/*.xml
   type-aliases-package: com.camel.oauth.resource.model
   configuration:
     map-underscore-to-camel-case: true
+
 pagehelper:
   helper-dialect: mysql
   reasonable: true
