--- a/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
@@ -35,7 +35,7 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 1234
-    url: jdbc:mysql://localhost:3306/dw_oauth2?useUnicode=true&characterEncoding=utf8
+    url: jdbc:mysql://127.0.0.1:3306/dw_oauth2?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC&useSSL=false
     type: com.alibaba.druid.pool.DruidDataSource
     tomcat:
       initial-size: 5
@@ -44,7 +44,7 @@ spring:
       max-wait: 60000
       time-between-eviction-runs-millis: 60000
       min-evictable-idle-time-millis: 300000
-      validation-query: SELECT 1 FROM t_user
+      validation-query: SELECT 1 FROM sys_user
       test-while-idle: true
       test-on-borrow: false
       test-on-return: false
@@ -52,7 +52,12 @@ spring:
       pool-prepared-statements: true
 #mybatis
 mybatis-plus:
-  mapper-locations: classpath*:/mapper/**Mapper.xml
+  mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.camel.oauth.server.entity
   configuration:
     map-underscore-to-camel-case: true
+
+springcloud:
+  oauth:
+    signin:
+      colum: email
