--- a/spring-cloud-oauth/springcloud-base-core/pom.xml
+++ b/spring-cloud-oauth/springcloud-base-core/pom.xml
@@ -28,6 +28,11 @@
 			<artifactId>mybatis-plus-boot-starter</artifactId>
 			<version>2.2.0</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.pagehelper</groupId>
+			<artifactId>pagehelper-spring-boot-starter</artifactId>
+			<version>1.2.5</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
