--- a/spring-cloud-oauth/springcloud-oauth-resource-system/pom.xml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/pom.xml
@@ -78,6 +78,16 @@
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-jwt</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity-engine-core</artifactId>
+			<version>2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.canmel.dwsurvey</groupId>
+			<artifactId>springcloud-base-core</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
