--- a/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
@@ -27,14 +27,14 @@ eureka:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/dwsurvey?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/dw_oauth2?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
     username: root
-    password: 123456
+    password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis-plus:
-  mapper-locations: classpath:mybatis/mapper/*.xml
-  type-aliases-package: com.camel.oauth.resource.model
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.canmel.dwsurvey.system.model
   configuration:
     map-underscore-to-camel-case: true
 
