--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /spring-cloud-oauth/springcloud-base-core/springcloud-base-core.iml
 /spring-cloud-oauth/springcloud-oauth-resource/pringcloud-oauth-server.iml
 /spring-cloud-oauth/springcloud-oauth-resource/springcloud-oauth-resource.iml
+/spring-cloud-oauth/springcloud-zuul-getway/springcloud-zuul-getway.iml
