--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@
 /spring-cloud-oauth/springcloud-oauth-resource/pringcloud-oauth-server.iml
 /spring-cloud-oauth/springcloud-oauth-resource/springcloud-oauth-resource.iml
 /spring-cloud-oauth/springcloud-zuul-getway/springcloud-zuul-getway.iml
+/spring-cloud-oauth/springcloud-eureka-server/springcloud-eureka-server.iml
+/spring-cloud-oauth/springcloud-oauth-resource-system/springcloud-oauth-resource-system.iml
+/spring-cloud-oauth/springcloud-oauth-server/springcloud-oauth-server.iml
+/spring-cloud-oauth/spring-cloud-oauth.iml
