--- a/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
@@ -29,12 +29,12 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/dw_oauth2?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
     username: root
-    password: 1234
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
-  type-aliases-package: com.canmel.dwsurvey.system.model
+  type-aliases-package: com.camel.dwsurvey.system.model
   configuration:
     map-underscore-to-camel-case: true
 
