--- a/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
@@ -18,6 +18,9 @@ security:
   oauth2:
     resource: 
       filter-order: 3
+    client:
+      refresh-token-validity-seconds: 20
+      access-token-validity-seconds: 30
 
 
 eureka:
@@ -50,6 +53,9 @@ spring:
       test-on-return: false
     dbcp2:
       pool-prepared-statements: true
+  redis:
+    host: 127.0.0.1
+    password:
 #mybatis
 mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
