--- a/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
+++ b/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
@@ -75,6 +75,12 @@
 			<artifactId>HdrHistogram</artifactId>
 			<version>2.1.7</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+			<version>1.4.7.RELEASE</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
