--- a/spring-cloud-oauth/springcloud-eureka-server/pom.xml
+++ b/spring-cloud-oauth/springcloud-eureka-server/pom.xml
@@ -15,6 +15,7 @@
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-eureka-server</artifactId>
+			<version>1.4.3.RELEASE</version>
 		</dependency>
 	</dependencies>
 
