--- a/spring-cloud-oauth/springcloud-oauth-server/pom.xml
+++ b/spring-cloud-oauth/springcloud-oauth-server/pom.xml
@@ -68,6 +68,7 @@
 		<dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
+			<version>2.0.1</version>
 		</dependency>
 
 		<dependency>
@@ -102,12 +103,7 @@
 			<version>2.3.23</version>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-redis -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-redis</artifactId>
-			<version>1.4.7.RELEASE</version>
-		</dependency>
+
 		<dependency>
 			<groupId>com.canmel.dwsurvey</groupId>
 			<artifactId>springcloud-base-core</artifactId>
