--- a/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
@@ -19,8 +19,8 @@ security:
     resource: 
       filter-order: 3
     client:
-      refresh-token-validity-seconds: 20
-      access-token-validity-seconds: 5
+      refresh-token-validity-seconds: 3600
+      access-token-validity-seconds: 1800
 
 
 eureka:
@@ -59,7 +59,7 @@ spring:
 #mybatis
 mybatis-plus:
   mapper-locations: classpath*:mapper/*.xml
-  type-aliases-package: com.camel.redis.entity
+  type-aliases-package: com.camel.oauth.server.entity
   configuration:
     map-underscore-to-camel-case: true
 
