--- a/spring-cloud-oauth/springcloud-bpm-server/pom.xml
+++ b/spring-cloud-oauth/springcloud-bpm-server/pom.xml
@@ -64,6 +64,11 @@
             <version>2.0.1</version>
         </dependency>
         <dependency>
+            <groupId>com.canmel.dwsurvey</groupId>
+            <artifactId>springcloud-base-core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>org.activiti</groupId>
             <artifactId>activiti-spring-boot-starter-basic</artifactId>
             <version>5.18.0</version>
