--- a/spring-cloud-oauth/springcloud-bpm-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-bpm-server/src/main/resources/application.yml
@@ -31,3 +31,14 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
 
 
+mybatis-plus:
+  mapper-locations: classpath:mapper/*.xml
+  type-aliases-package: com.camel.dwsurvey.bpm.model
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+pagehelper:
+  helper-dialect: mysql
+  reasonable: true
+  support-methods-arguments: true
