--- a/spring-cloud-oauth/springcloud-bpm-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-bpm-server/src/main/resources/application.yml
@@ -29,6 +29,8 @@ spring:
     username: root
     password: 1234
     driver-class-name: com.mysql.jdbc.Driver
+  application:
+    name: springcloud-bpm-server
 
 
 mybatis-plus:
