--- a/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
@@ -33,6 +33,8 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
   aop:
     auto: true
+  application:
+    name: springcloud-oauth-system-server
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
