--- a/spring-cloud-oauth/springcloud-oauth-resource/pom.xml
+++ b/spring-cloud-oauth/springcloud-oauth-resource/pom.xml
@@ -69,6 +69,12 @@
 		  <artifactId>pagehelper-spring-boot-starter</artifactId>
 		  <version>1.2.5</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>com.canmel.dwsurvey</groupId>
+		  <artifactId>spring-cloud-feign</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+		  <scope>compile</scope>
+	  </dependency>
   </dependencies>
 
 	<dependencyManagement>
