--- a/spring-cloud-oauth/springcloud-oauth-resource/pom.xml
+++ b/spring-cloud-oauth/springcloud-oauth-resource/pom.xml
@@ -75,6 +75,12 @@
 		  <version>0.0.1-SNAPSHOT</version>
 		  <scope>compile</scope>
 	  </dependency>
+	  <dependency>
+		  <groupId>com.canmel.dwsurvey</groupId>
+		  <artifactId>springcloud-redis</artifactId>
+		  <version>0.0.1-SNAPSHOT</version>
+		  <scope>compile</scope>
+	  </dependency>
   </dependencies>
 
 	<dependencyManagement>
