--- a/spring-cloud-oauth/springcloud-bpm-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-bpm-server/src/main/resources/application.yml
@@ -21,11 +21,11 @@ security:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8888/eureka/
+      defaultZone: http://${APPLICATION_IP}:8888/eureka/
 
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/dw_bpm?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://${APPLICATION_IP}:3306/dw_bpm?useUnicode=true&characterEncoding=UTF-8&useSSL=true&serverTimezone=UTC
     username: root
     password: 1234
     driver-class-name: com.mysql.jdbc.Driver
