--- a/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
@@ -23,14 +23,14 @@ security:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://127.0.0.1:8888/eureka/
+      defaultZone: http://${APPLICATION_IP}:8888/eureka/
     fetch-registry: true
 
 spring:
   application:
     name: springcloud-oauth-resource
   datasource:
-    url: jdbc:mysql://localhost:3306/dwsurvey?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
+    url: jdbc:mysql://${APPLICATION_IP}:3306/dwsurvey?useUnicode=true&characterEncoding=utf8&useSSL=true&serverTimezone=UTC
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
