--- a/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-server/src/main/resources/application.yml
@@ -54,8 +54,15 @@ spring:
     dbcp2:
       pool-prepared-statements: true
   redis:
+    database: 0
     host: ${APPLICATION_IP}
     password:
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
   application:
     name: springcloud-oauth-server
 #mybatis
