--- a/spring-cloud-oauth/springcloud-redis/pom.xml
+++ b/spring-cloud-oauth/springcloud-redis/pom.xml
@@ -18,5 +18,10 @@
             <artifactId>spring-boot-starter-redis</artifactId>
             <version>1.4.7.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.session</groupId>
+            <artifactId>spring-session-data-redis</artifactId>
+            <version>2.1.7.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
