--- a/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
@@ -35,6 +35,16 @@ spring:
     auto: true
   application:
     name: springcloud-oauth-system-server
+  redis:
+    database: 0
+    host: ${APPLICATION_IP}
+    password:
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
