--- a/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
@@ -34,6 +34,16 @@ spring:
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
+  redis:
+    database: 0
+    host: ${APPLICATION_IP}
+    password:
+    jedis:
+      pool:
+        max-active: 8
+        max-wait: -1
+        max-idle: 8
+        min-idle: 0
 
 mybatis-plus:
   mapper-locations: classpath:mybatis/mapper/*.xml
