--- a/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource/src/main/resources/application.yml
@@ -27,6 +27,8 @@ eureka:
     fetch-registry: true
 
 spring:
+  session:
+    store-type: redis
   application:
     name: springcloud-oauth-resource
   datasource:
