--- a/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
+++ b/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
@@ -81,6 +81,13 @@
 			<artifactId>springcloud-redis</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
+
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-session-data-redis</artifactId>
+					<groupId>org.springframework.session</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
