原来我真的这么菜。哈哈。 不过菜也是一个段位哎。

--- a/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
+++ b/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
@@ -82,12 +82,12 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 
-			<exclusions>
-				<exclusion>
-					<artifactId>spring-session-data-redis</artifactId>
-					<groupId>org.springframework.session</groupId>
-				</exclusion>
-			</exclusions>
+			<!--<exclusions>-->
+				<!--<exclusion>-->
+					<!--<artifactId>spring-session-data-redis</artifactId>-->
+					<!--<groupId>org.springframework.session</groupId>-->
+				<!--</exclusion>-->
+			<!--</exclusions>-->
 		</dependency>
 	</dependencies>
 
