--- a/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
+++ b/spring-cloud-oauth/springcloud-zuul-getway/pom.xml
@@ -77,17 +77,9 @@
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-redis -->
 		<dependency>
-			<groupId>com.canmel.dwsurvey</groupId>
-			<artifactId>springcloud-redis</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-			<scope>compile</scope>
-
-			<!--<exclusions>-->
-				<!--<exclusion>-->
-					<!--<artifactId>spring-session-data-redis</artifactId>-->
-					<!--<groupId>org.springframework.session</groupId>-->
-				<!--</exclusion>-->
-			<!--</exclusions>-->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+			<version>1.4.7.RELEASE</version>
 		</dependency>
 	</dependencies>
 
