继续撤退，剥离出MyUserDetail,准备统一管理

--- a/spring-cloud-oauth/pom.xml
+++ b/spring-cloud-oauth/pom.xml
@@ -19,5 +19,6 @@
         <module>springcloud-bpm-server</module>
         <module>spring-cloud-config</module>
         <module>spring-cloud-feign</module>
+        <module>springcloud-base-oauth</module>
     </modules>
 </project>
