--- a/spring-cloud-oauth/springcloud-base-oauth/pom.xml
+++ b/spring-cloud-oauth/springcloud-base-oauth/pom.xml
@@ -9,18 +9,18 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>springboot-base-oauth</artifactId>
+    <artifactId>springcloud-base-oauth</artifactId>
 
     <dependencies>
         <dependency>
-            <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-oauth2</artifactId>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.0.14.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
             <version>5.1.4.RELEASE</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
