--- a/spring-cloud-oauth/springcloud-oauth-resource-system/pom.xml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/pom.xml
@@ -14,8 +14,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework.security.oauth</groupId>
-			<artifactId>spring-security-oauth2</artifactId>
+			<groupId>com.canmel.dwsurvey</groupId>
+			<artifactId>springcloud-base-oauth</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
