--- a/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/src/main/resources/application.yml
@@ -35,6 +35,20 @@ spring:
     auto: true
   application:
     name: springcloud-oauth-system-server
+  redis:
+    host: ${REDIS_HOST}
+    port: 6379
+    password:
+    timeout: 6000
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
+    database: 0
+  session:
+    store-type: redis
 
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
