--- a/spring-cloud-oauth/springcloud-zuul-getway/src/main/resources/application.yml
+++ b/spring-cloud-oauth/springcloud-zuul-getway/src/main/resources/application.yml
@@ -26,6 +26,7 @@ person:
 # Proxies the calls to http://localhost:8080/api/* to our REST service at http://localhost:9000/*
 # and automatically includes our OAuth2 token in the request headers
 zuul:
+  ignoredServices: '*'
   SendErrorFilter:
     post:
       desable: true
@@ -33,18 +34,23 @@ zuul:
     resource:
       path: /api/**
       url: http://${APPLICATION_IP}:9000
+      sensitiveHeaders: "*"
     system:
       path: /system/**
       url: http://${APPLICATION_IP}:9001
+      sensitiveHeaders: "*"
     user: 
       path: /user/**
       url: http://${APPLICATION_IP}:9000/user
+      sensitiveHeaders: "*"
     auth:
       path: /auth/**
       url: http://${APPLICATION_IP}:7070
+      sensitiveHeaders: "*"
     bpm:
       path: /bpm/**
       url: http://${APPLICATION_IP}:6789
+      sensitiveHeaders: "*"
 
 # Make sure the OAuth2 token is only relayed when using the internal API,
 # do not pass any authentication to the external API
@@ -59,5 +65,19 @@ eureka:
     serviceUrl:
       defaultZone: http://${APPLICATION_IP}:8888/eureka/
 spring:
+  session:
+    store-type: redis
+  redis:
+    host: ${REDIS_HOST}
+    port: 6379
+    password:
+    timeout: 6000
+    lettuce:
+      pool:
+        max-active: 8
+        max-wait: -1ms
+        max-idle: 8
+        min-idle: 0
+    database: 0
   application:
     name: springcloud-zuul-getway-server
