--- a/spring-cloud-oauth/springcloud-oauth-resource-system/pom.xml
+++ b/spring-cloud-oauth/springcloud-oauth-resource-system/pom.xml
@@ -99,6 +99,12 @@
 			<artifactId>springcloud-redis</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.session</groupId>
+					<artifactId>spring-session-data-redis</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
