--- a/spring-cloud-oauth/springcloud-bpm-server/pom.xml
+++ b/spring-cloud-oauth/springcloud-bpm-server/pom.xml
@@ -108,6 +108,12 @@
             <artifactId>springcloud-redis</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.session</groupId>
+                    <artifactId>spring-session-data-redis</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
